# Harc

assets/help_pages/: general
internal/harc/: CMakeLists.txt
internal/harc/include/harc/: Clients.hpp  Config.hpp  Error_reporting.hpp  Errors.hpp  Harc.hpp  Logging.hpp  Networking.hpp  Translation_unit.hpp
internal/harc/include/harc/arch/arm/: Registers.hpp
internal/harc/include/harc/arch/x86_64/: Extensions.hpp  Microarchitectures.hpp  Registers.hpp
internal/harc/include/harc/cli/: CLI.hpp  CLI_arguments.hpp  Help.hpp
internal/harc/include/harc/common/: Algorithms.hpp  OS_utils.hpp
internal/harc/include/harc/cuda_common/: Codepoint_manipulation_tables.cuh
internal/harc/include/harc/prepass/: Prepass.hpp
internal/harc/plans/harc/abi/: Harc_abi.md
internal/harc/src/: Clients.cpp  Errors.cpp  Harc.cpp  Main.cpp  Translation_unit.cpp
internal/harc/src/cli/: CLI.cpp  CLI_arguments.cpp  Help.cpp
internal/harc/src/common/: Algorithms.cpp  OS_utils.cpp
internal/harc/src/parser/: Parser.cpp
internal/harc/src/prepass/: Prepass.cpp
internal/harc/support/: CMakeLists.txt  Generate_help_page_code.py  retrieve_instructions.py
internal/harc/tests/: CMakeLists.txt  Harc_tests.cpp
internal/harc/tests/common/: Algorithms.hpp
internal/libharc_backend/: CMakeLists.txt
internal/libharc_backend/include/harc/arch/x86_64/: Flags.hpp  Instruction.hpp  Opcode_maps.hpp  Opcodes.hpp  Registers.hpp
internal/libharc_backend/include/harc/emit_cpp/: Emit_cpp.hpp
internal/libharc_backend/src/arch/x86_64/: Instruction.cpp  Opcode_maps.cpp
internal/libharc_backend/src/emit_cpp/: Emit_cpp.cpp
internal/libharc_backend/support/instruction_pdf_parser/: Parse_instruction_csv.py  Parse_instruction_set_reference.py
internal/libharc_core/: CMakeLists.txt
internal/libharc_core/include/harc/: Algorithms.hpp  Caching.hpp  Config.hpp  Message_buffer.hpp  OS_utils.hpp  Strings.hpp  Util.hpp  Version.hpp
internal/libharc_core/include/harc/ir/: IR.hpp  Operations.hpp  Types.hpp
internal/libharc_core/include/harc/unicode/: Algorithms.hpp  Fwd_it.hpp  Unicode.hpp  Unicode_tables.hpp
internal/libharc_core/src/: Caching.cpp  Message_buffer.cpp  OS_utils.cpp  Strings.cpp
internal/libharc_core/src/ir/: IR.cpp  Operations.cpp
internal/libharc_core/support/Unicode_table_generator/: Unicode_table_generator.py  Unicode_tables_template.hpp
internal/libharc_core/tests/: CMakeLists.txt  Message_buffer.hpp  libharc_core_tests.cpp
internal/libharc_core/tests/unicode/: CMakeLists.txt
internal/libharc_frontend/: CMakeLists.txt
internal/libharc_frontend/include/harc/lexer/: Cache.hpp  Lexer.hpp  Lexing_errors.hpp  Tokens.hpp
internal/libharc_frontend/include/harc/parser/: Lowering.hpp  Parser.hpp  Parsing_errors.hpp
internal/libharc_frontend/src/lexer/: Cache.cpp  Lexer.cpp  Tokens.cpp  Utils.cpp
